--- a/Main page.html
+++ b/Main page.html
@@ -102,9 +102,17 @@
         <div class="image">
             <a href=""><img src="Pauline.jpg" alt="Image 11"></a>
         </div>
+        <p>Paulin est une fille rencontrée au sport et qui et comme aliènor,
+            plate avec comme seule consolation. Son visage et moyen mais il donne
+            tout de même envie de se vider dessus.
+        </p>
         <div class="image">
             <a href=""><img src="Romane Head.jpg" alt="Image 12"></a>
         </div>
+        <p>Romane, c'est une fille je connais depuis quelque années maintenant, elle est
+            plutôt belle et avec un peu de seins(vraiment peu) et un cul un peu plus developé
+            elle est très pure vus de l'exterieur et ça donne encore plus envie de lui faire quelque chose.
+        </p>
     </main>
 
     <footer>
@@ -112,3 +120,4 @@
     </footer>
 </body>
 </html>
+
