--- a/Main page.html
+++ b/Main page.html
@@ -12,6 +12,7 @@
             <ul>
                 <li><a href="Main page.html">Accueil</a></li>
                 <li><a href="page Contact.html">Contact</a></li>
+                <li><a href="Réseaux.html">Réseaux</a></li>
             </ul>
         </nav>
     </header>
@@ -102,14 +103,14 @@
         <div class="image">
             <a href=""><img src="Pauline.jpg" alt="Image 11"></a>
         </div>
-        <p>Paulin est une fille rencontrée au sport et qui et comme aliènor,
-            plate avec comme seule consolation. Son visage et moyen mais il donne
+        <p>Pauline est une fille rencontrée au sport et qui et comme aliènor,
+            plate avec comme seule consolation son petit cul. Son visage et moyen mais il donne
             tout de même envie de se vider dessus.
         </p>
         <div class="image">
             <a href=""><img src="Romane Head.jpg" alt="Image 12"></a>
         </div>
-        <p>Romane, c'est une fille je connais depuis quelque années maintenant, elle est
+        <p>Romane, c'est une fille je connais depuis quelques années maintenant, elle est
             plutôt belle et avec un peu de seins(vraiment peu) et un cul un peu plus developé
             elle est très pure vus de l'exterieur et ça donne encore plus envie de lui faire quelque chose.
         </p>
@@ -120,4 +121,5 @@
     </footer>
 </body>
 </html>
+
 
