--- a/page Contact.html
+++ b/page Contact.html
@@ -12,6 +12,7 @@
             <ul>
                 <li><a href="Main page.html">Accueil</a></li>
                 <li><a href="page Contact.html">Contact</a></li>
+                <li><a href="Réseaux.html">Réseaux</a></li>
             </ul>
         </nav>
     </header>
