--- a/Réseaux.html
+++ b/Réseaux.html
@@ -21,7 +21,7 @@
 
             <!---Les imges-->
             <div class="image">
-              <a href=""><img src="Aliénor.jpg" alt="Image 1"></a>
+              <a href="Réseaux_Aliénor.html"><img src="Aliénor.jpg" alt="Image 1"></a>
             </div>
             <div class="image">
               <a href=""><img src="Chloé.jpg" alt="Image 2"></a>
