--- a/Main page.html
+++ b/Main page.html
@@ -108,18 +108,35 @@
             tout de même envie de se vider dessus.
         </p>
         <div class="image">
-            <a href=""><img src="Romane Head.jpg" alt="Image 12"></a>
+            <a href="https://pixhost.to/gallery/zOIWK"><img src="Romane Head.jpg" alt="Image 12"></a>
         </div>
         <p>Romane, c'est une fille je connais depuis quelques années maintenant, elle est
             plutôt belle et avec un peu de seins(vraiment peu) et un cul un peu plus developé
             elle est très pure vus de l'exterieur et ça donne encore plus envie de lui faire quelque chose.
         </p>
+        <div class="image">
+            <a href=""><img src="Clara.jpg" alt="Image 13"></a>
+        </div>
+        <p>Clara, une vraie pute en faite, une fille que j'ai connue plus tôt et qui maintenant
+            est devenue UNE vraie salope à bites. Un cul parfaits, des seins enormes et comme il faut.
+            Une vraie salope.
+        </p>
+        <div class="image">
+            <a href=""><img src="Marie.jpg" alt="Image 14"></a>
+        </div>
+        <p>C'est une fille qui bien qu'elle soit petite, elle vraiment pas mal, comme une envie de jouir sur 
+            son front luisant. En plus d'avoir des seins pas trop mal elle est faite d'un cul attirant. Une fille 
+            qui même si petite est une des grande salope à l'interieur, elle ne demande que des bites pour elle.
+        </p>
+        <div class="image">
+            <a href=""><img src="Julia.jpg" alt="Image 15"></a>
+        </div>
+        <p>Julia, modèle de porn pes très agée mdr
+        </p>
     </main>
-
     <footer>
         <p>&copy; 2023 Mon Blog d'Images</p>
     </footer>
 </body>
 </html>
-
 
