--- a/Main page.html
+++ b/Main page.html
@@ -22,7 +22,7 @@
 
         <!-- Insérez vos images ici -->
         <div class="image">
-            <a href="https://pixhost.to/gallery/9J16e"><img src="Aliénor.jpg" alt="Image 1"></a>
+            <a href="https://pixhost.to/gallery/wfFUf"><img src="Aliénor.jpg" alt="Image 1"></a>
         </div>
         <p>Voici Aliénor, une fille plate comme une planche de pain,
             mais avec un visage assez provocant, elle ne demande qu'a
