--- a/Main page.html
+++ b/Main page.html
@@ -115,21 +115,21 @@
             elle est très pure vus de l'exterieur et ça donne encore plus envie de lui faire quelque chose.
         </p>
         <div class="image">
-            <a href=""><img src="Clara.jpg" alt="Image 13"></a>
+            <a href="https://pixhost.to/gallery/59NDh"><img src="Clara.jpg" alt="Image 13"></a>
         </div>
         <p>Clara, une vraie pute en faite, une fille que j'ai connue plus tôt et qui maintenant
             est devenue UNE vraie salope à bites. Un cul parfaits, des seins enormes et comme il faut.
             Une vraie salope.
         </p>
         <div class="image">
-            <a href=""><img src="Marie.jpg" alt="Image 14"></a>
+            <a href="https://pixhost.to/gallery/KRwlx"><img src="Marie.jpg" alt="Image 14"></a>
         </div>
         <p>C'est une fille qui bien qu'elle soit petite, elle vraiment pas mal, comme une envie de jouir sur 
             son front luisant. En plus d'avoir des seins pas trop mal elle est faite d'un cul attirant. Une fille 
             qui même si petite est une des grande salope à l'interieur, elle ne demande que des bites pour elle.
         </p>
         <div class="image">
-            <a href=""><img src="Julia.jpg" alt="Image 15"></a>
+            <a href="https://pixhost.to/gallery/FBeja"><img src="Julia.jpg" alt="Image 15"></a>
         </div>
         <p>Julia, modèle de porn pes très agée mdr
         </p>
@@ -139,4 +139,5 @@
     </footer>
 </body>
 </html>
+
 
