--- a/Main page.html
+++ b/Main page.html
@@ -41,7 +41,7 @@
             <a href="https://pixhost.to/gallery/ZRjVM"><img src="jeanne (3).jpg" alt="Image 3"></a>
         </div>
         <p>Je vous présente jeanne, une fille aux gros seins, pas de soucis,
-            d'un cul poas trop mal non plus mais d'un visage pas attirant sauf 
+            un cul pas trop mal non plus mais un visage pas attirant sauf 
             pour du sperme. Autrement dis, elle est un jouet sexuelle qui ne 
             trouvera peut-être pas d'amour mais par contre elle trouvera du sex 
             ça c'est sûr.
@@ -52,15 +52,15 @@
         <p>Ah lala, je ne pouvais pas ne pas parler de Josephine, une fille qui franchement,
             ne demande que le viol. Une fille à papa qui n'utilise que des tenues provocantes
             et qui comme Jeanne, trouvera c'est sûr du sex. Une salope aux seins ok
-            et au cul vraiment ok. Son visage d'ange fais l'effet de violer une sainte
-            mais une sainte qui ne pense qu'au cul. L'une des personne les plus bandante.
+            et au cul vraiment ok. La seule pensée d'elle se faisant violer par un groupe,
+            ou de moi contollant sont vibro me font bander.
         </p>
         <div class="image">
             <a href="https://pixhost.to/gallery/owUsm"><img src="Juliette.jpg" alt="Image 5"></a>
         </div>
-        <p>Juliette est une fille qui a des atouts, c'est sûr mais peut-êtreun peu trop 
-            massif, elle à des seins mais peut-être un peu trop et un cul peut-êtr un peut
-            trop gros. En revanche, son vidage est magnifique. Elle ne demande qu'a manger
+        <p>Juliette est une fille qui a des atouts, c'est sûr mais peut-être un peu trop 
+            massif, elle à des seins mais peut-être un peu trop et un cul peut-être un peu
+            trop gros. En revanche, son visage est magnifique. Elle ne demande qu'a manger
             des bites et ce faire peindre le visage par du sperme sur le front et dans les cheuveux.
         </p>
         <div class="image">
@@ -129,7 +129,12 @@
             qui même si petite est une des grande salope à l'interieur, elle ne demande que des bites pour elle.
         </p>
         <div class="image">
-            <a href="https://pixhost.to/gallery/FBeja"><img src="Julia.jpg" alt="Image 15"></a>
+            <a href="https://pixhost.to/gallery/xAMpJ"><img src="Candice.jpg" alt="Image 15"></a>
+        </div>
+        <p>je n'ai pour le moment rien à dire sur cette salope.
+        </p>
+        <div class="image">
+            <a href="https://pixhost.to/gallery/FBeja"><img src="Julia.jpg" alt="Image 16"></a>
         </div>
         <p>Julia, modèle de porn pes très agée mdr
         </p>
