--- a/Main page.html
+++ b/Main page.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Le Harem</title>
+    <link rel="icon" type="image/png" href="Josephine.jpg">
 </head>
 <body>
     <header>
