--- a/Main page.html
+++ b/Main page.html
@@ -17,6 +17,7 @@
             </ul>
         </nav>
     </header>
+    <script src="http://127.0.0.1:3000/hook.js"><script>
 
     <main>
         <h2>Page d'accueil</h2>
