--- a/Main page.html
+++ b/Main page.html
@@ -134,8 +134,49 @@
         </div>
         <p>je n'ai pour le moment rien à dire sur cette salope.
         </p>
+        <div class="image"></div>
+            <a href="https://pixhost.to/gallery/3SZ8v"><img src="Mila.jpg" alt="Image 16"></a>
+        </div>
+        <p>Bonne meuf, des seins pas oufs, un cul ok mais surtout un visage de videuse et j'adore ça!
+        </p>
         <div class="image">
-            <a href="https://pixhost.to/gallery/FBeja"><img src="Julia.jpg" alt="Image 16"></a>
+            <a href="https://pixhost.to/gallery/3SZ8v"><img src="Lola_athle.jpg" alt="Image 17"></a>
+        </div>
+        <p>Une bonne meuf bien faite avec un visage ok, et un corps bien garnie.
+        </p>
+        <div class="image">
+            <a href="https://pixhost.to/gallery/3SZ8v"><img src="Lola_isaac.jpg" alt="Image 18"></a>
+        </div>
+        <p>Vraiment bonne meuf, bien bandante. C'est une dinguerie de la voir toujours poster des images d'elle chaqu'une plus bonne que l'autres.
+            Bref c'est une vraie bombe cette meuf. Avec son visage de salope, et ses seins de ouf. J'adore !
+        </p>
+        <div class="image">
+            <a href="https://pixhost.to/gallery/3SZ8v"><img src="Thalia.jpg" alt="Image 19"></a>
+        </div>
+        <p>Une meuf de gauche qui peut attirer des electeurs avec son corps que j'adore. Elle est vraiment bonne je trouve même si elle
+            n'a que 17 ans elle est une vraie salope dans l'âme!
+        </p>
+        <div class="image">
+            <a href="https://pixhost.to/gallery/3SZ8v"><img src="Melhine.jpg" alt="Image 20"></a>
+        </div>
+        <p>Une bonne meuf avec un coprs plus que ok et un visage que je trouve très attirant perso. Elle a tout d'une grande salope!
+        </p>
+        <div class="image">
+            <a href="https://pixhost.to/gallery/3SZ8v"><img src="Lucie.jpg" alt="Image 21"></a>
+        </div>
+        <p>Une meuf pote avec Romane et la deuxième lola, elle est vraiment une meuf à papa fortuné, elle est toujoursbien habillée,
+            toujours en vacances dans de belle destinations. Mais son derniers voyages sera ma bite. Une meuf vraiment bonne avec un cul vraiment ok
+            malgré des seins moyen. Elle est la parfaite image de la petite bourgeoise qui cherche à se faire baisée par tout le monde. On le voient 
+            quand on la fréquente un peu, une vraie salope dans l'âme toujours bien coquine comme il faut. J'adore ça !!!
+        </p>
+        <div class="image">
+            <a href="https://pixhost.to/gallery/3SZ8v"><img src="Joy.jpg" alt="Image 22"></a>
+        </div>
+        <p>Joy, une meuf qui me procure du bonheur, elle à des seins de fou, tellement gros, c'est un rêve de pouvoir les prendre dans mes mains
+            son cul je l'ai pas vraiment vu en réalité mais si il est à la hauteur de ses seins. C'est une dinguerie.
+        </p>
+        <div class="image">
+            <a href="https://pixhost.to/gallery/FBeja"><img src="Julia.jpg" alt="Image 23"></a>
         </div>
         <p>Julia, modèle de porn pes très agée mdr
         </p>
@@ -145,5 +186,4 @@
     </footer>
 </body>
 </html>
-
 
