--- a/Main page.html
+++ b/Main page.html
@@ -23,7 +23,7 @@
 
         <!-- Insérez vos images ici -->
         <div class="image">
-            <a href="https://pixhost.to/gallery/wfFUf"><img src="Aliénor.jpg" alt="Image 1"></a>
+            <a href="https://pixhost.to/gallery/aX0vk"><img src="Aliénor.jpg" alt="Image 1"></a>
         </div>
         <p>Voici Aliénor, une fille plate comme une planche de pain,
             mais avec un visage assez provocant, elle ne demande qu'a
@@ -48,7 +48,7 @@
             ça c'est sûr.
         </p>
         <div class="image">
-            <a href="https://pixhost.to/gallery/gfkM4"><img src="Josephine.jpg" alt="Image 4"></a>
+            <a href="https://pixhost.to/gallery/GYTDF"><img src="Josephine.jpg" alt="Image 4"></a>
         </div>
         <p>Ah lala, je ne pouvais pas ne pas parler de Josephine, une fille qui franchement,
             ne demande que le viol. Une fille à papa qui n'utilise que des tenues provocantes
